# kenji-live

./: .gitignore  README.md
client-live/: next.config.ts  package.json  pnpm-lock.yaml
client-live/src/: mockData.ts
client-live/src/app/: globals.css  layout.tsx  page.tsx
client-live/src/app/broadcaster/[roomId]/: layout.tsx  (+1 more)
client-live/src/components/: Header.tsx  StreamCard.tsx  TooltipWrapper.tsx
client-live/src/components/LiveMain/: Content.tsx  GivePresent.tsx  LeftSideBar.tsx  RecommendLives.tsx  RightSideBar.tsx  index.tsx
client-live/src/components/Video/: RoomVideo-copy.tsx  RoomVideo.tsx
client-live/src/contexts/: LiveContext.tsx
client-live/src/hooks/: useLiveContext.ts
client-live/src/types/: index.ts  room.types.ts
live-server/: package.json  pnpm-lock.yaml
live-server/src/: index.js  redis.js
live-server/src/utils/: redis.util.js
live-server/src/web-rtc/: configs.js  index.js
live-server/src/ws/: common.js  consumers.js  helper.js  index.js  producers.js
live-service/: docker-compose.yml  package.json  pnpm-lock.yaml
live-service/nginx/: nginx.conf
live-service/src/: app.module.ts  main.ts
live-service/src/models/live-streaming/: configs.ts  live-streaming.module.ts
live-service/src/models/mediasoup/: configs.ts  mediasoup.service.ts
live-service/src/models/room/: room.service.ts
live-service/src/models/websocket/: websocket.gateway.ts
node-live/: app.js  index.js  package.json  pnpm-lock.yaml
rust-server/: Cargo.toml
rust-server/src/: lib.rs  main.rs  ws.rs
rust-server/src/websocket/: mod.rs  server.rs
(+16 files in other folders)
