[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = ["crates/*"]

[dependencies]
# 异步运行时
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# WebRTC & 媒体处理
mediasoup = { git = "https://github.com/versatica/mediasoup-rs" }
webrtc-rs = "0.5"

# Web服务器
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置管理
config = "0.13"

# 认证
jsonwebtoken = "8.3"
bcrypt = "0.10"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# 性能与安全
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 指标监控
prometheus = "0.13"

[dev-dependencies]
mockall = "0.11"
criterion = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"